Add advertisers API endpoints
